Fix overflowing images

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -80,6 +80,7 @@ ol:last-child {
 
     img {
         max-height: 40rem;
+        max-width: 100%;
     }
 
     @media (max-width: 767px) {
